[package]
name = "quick_scraper"
version = "0.1.0"
authors = ["Michael Khirallah <mike.mkrallaproductions@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
futures-core-preview="0.3.0-alpha.19"
async-std = {version = "1.4.0", features = ["unstable"]}
scraper = {version = "0.11.0"}

debug_stub_derive = "0.3.0"
surf = {version = "1.0.3"}